# fast_api_learn

./: .gitignore  crud.py  items_views.py  key  key.txt  main.py  pyproject.toml  python-теория.docx  query.sql
alembic/: env.py
alembic/versions/: 2024_03_01_2221-7a47dc5565db_create_table.py  2024_03_04_1442-4f8d0e517903_create_table.py  2024_03_04_1457-e2038025ff8a_create_users_table.py  2024_03_04_1508-b57f3499dcec_create_posts_table.py  2024_03_04_1659-13d11e2055bc_create_posts_table.py  2024_03_04_1812-a192e381a10a_create_posts_profile.py  33100f52a100_create_products_table.py
api_for_db_v1/: __init__.py
api_for_db_v1/product/: crud.py  dependencies.py  schemas.py  view.py
fast_api_app/: items_views.py  main.py
fast_api_app/core/: settings.py
fast_api_app/core/models/: __init__.py  db_helper.py  order.py  post.py  user.py
fast_api_app/users/: chemas.py  crud.py  views.py
